// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render PlayerButton Should MovieGenresItem activeGenre render correctly 1`] = `
<li
  className="catalog__genres-item catalog__genres-item--active"
>
  <a
    className="catalog__genres-link"
    href="#"
    onClick={[Function]}
  >
    Comedy
  </a>
</li>
`;

exports[`Render PlayerButton Should MovieGenresItem render correctly 1`] = `
<li
  className="catalog__genres-item "
>
  <a
    className="catalog__genres-link"
    href="#"
    onClick={[Function]}
  >
    Fantasy
  </a>
</li>
`;
